fix: fix dark mode, implement it with next-themes

--- a/app/_styles/globals.css
+++ b/app/_styles/globals.css
@@ -17,8 +17,6 @@
 
 @custom-variant dark (&:where(.dark, .dark *));
 
-
-
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -47,7 +45,7 @@
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
   }
-  .dark {
+  /* .dark {
     --background: 224 71.4% 4.1%;
     --foreground: 210 20% 98%;
     --card: 224 71.4% 4.1%;
@@ -72,10 +70,8 @@
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
-  }
+  } */
 }
-
-
 
 @layer base {
   * {
